<resources>
    <string name="app_name">Smart Meter</string>
    <string name="chillar_1">Chillar-1</string>
    <string name="thermostat">Thermostat</string>
    <string name="single_phasing">Single Phasing</string>
    <string name="low_pressure">Low Pressure</string>
    <string name="high_pressure">High Pressure</string>
    <string name="compressor_olr">Compressor OLR</string>
    <string name="primary_pump_olr">Primary Pump OLR</string>
    <string name="icon_heart">&#xf004;</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password_txt">Forgot Password?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="sign_in">Already Have Account? <u>Click Here</u></string>
    <string name="title_activity_main">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date_txt">Date</string>
    <string name="date">Date:</string>
    <string name="submit">Submit</string>
    <string name="smile">\ue9e1</string>
    <string name="icon_prefix">&#92;u</string>
    <string name="icon_high_voltage">\ue902</string>
    <string name="http_error">http error</string>
    <string name="error_connecting_error">error connecting server</string>
    <string name="error_passing_data">error passing data</string>
    <string name="error_unexpected">unexpected error</string>
    <string name="check_internet_connection">Check Internet Connection</string>
    <string name="retry">Retry</string>
    <string name="history">History</string>
    <string name="time_txt">Time</string>
    <string name="time_txt_caps">TIME</string>
    <string name="value_txt">Value</string>
    <string name="refresh">Refresh</string>
    <string name="dummy_device_num">TFJKKK000000000000</string>
    <string name="dummy_date">Nov-2018</string>
    <string name="loading">Loading...</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="closedrawer">closedrawer</string>
    <string name="opendrawer">opendrawer</string>
    <string name="server_error">Error connecting server</string>
    <string name="get_data">Get Data</string>
    <string name="search_txt">Search</string>
    <string name="last_sync">Last sync:</string>
    <string name="txt_copyright"> by Techuva Solutions Pvt. Ltd.</string>
    <string name="email_id">Email ID</string>
    <string name="click_here_forgot_password"><u>Click Here</u></string>
    <string name="error_connecting_server">Error connecting server</string>
    <string name="btn_prev">Previous</string>
    <string name="next">Next</string>
    <string name="data_not_found">Data not available</string>
    <string-array name="navdraweritemsafterlogin">
        <item>Home</item>
        <item>Recharge Meter</item>
        <item>Old Meter Summary</item>
        <item>Meter Loan Summary</item>
        <item>Change Password</item>
        <item>About App</item>
        <item>Terms and Conditions</item>
        <item>Logout</item>
    </string-array>
    <string-array name="navdraweritemsbeforelogin">
        <item>Devices</item>
        <item>Device History</item>
        <item>About App</item>
        <item>Terms and Conditions</item>
        <item>Logout</item>
    </string-array>
    <string name="title_activity_user_accounts">Techuva IoT</string>
    <string name="login_success">You have successfully logged in!</string>
    <string name="account_confirmation">Your email is linked with multiple accounts, so you have to choose the account before you proceed!</string>
    <string name="account_confirmation2">so you have to choose the Account before you Proceed!</string>
    <string name="txt_continue">Continue</string>
    <string name="select_device">Please select a default device.</string>
    <string name="default_device_select">Do you want to set this device as default?</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="permission_necessary">Permission Requested</string>
    <string name="storage_permission_is_necessary_to_wrote_event">Please provide the storage permission..</string>
    <string name="yes">Yes</string>
    <string name="enter_email">Please enter Email Id</string>
    <string name="enter_reg_email">Please enter registered Email Id</string>
    <string name="alert">Alert</string>
    <string name="success">Success</string>
    <string name="title_activity_data_graph">DataGraphActivity</string>
    <string name="graph">Graph</string>
    <string name="nodata">No data found for selected date.</string>
    <string name="recharge">Recharge</string>
    <string name="title_activity_recharge_history">RechargeHistoryActivity</string>
    <string name="customer_login_txt">Customer Login</string>
    <string name="usn">USN:</string>
    <string name="connection">Connection:</string>
    <string name="zone">Zone:</string>
    <string name="currency">NGN</string>
    <string name="tariff">Tariff:</string>
    <string name="mode">Mode</string>
    <string name="amount">Amount</string>
    <string name="choose_connection">Choose Connection</string>
    <string name="balance">BALANCE:</string>
    <string name="state">STATE:</string>
    <string name="no_data_found">No data found</string>
    <string name="postpaid">Postpaid</string>
    <string name="prepaid">Prepaid</string>
    <string name="credit_debit_card">Credit/Debit/Bank</string>
    <string name="recharge_card">Recharge Card</string>
    <string name="life_saver">Life Saver</string>
    <string name="recharge_meter">Recharge Meter</string>
    <string name="review_order">Review Your Order</string>
    <string name="usn_to_recharge">USN to Recharge</string>
    <string name="paid_by">Paid By</string>
    <string name="comments">Comments</string>
    <string name="usable_amount">Usable Amount:</string>
    <string name="fixed_charges">Fixed Charge:</string>
    <string name="vat_txt">VAT:</string>
    <string name="total_amt_txt">Total Paid Amount</string>
    <string name="recharge_complete">Recharge Complete</string>
    <string name="recharge_again">Recharge again</string>
    <string name="failed">Failed</string>
    <string name="payment_ref">Payment Ref:</string>
    <string name="payment_method">Payment Method:</string>
    <string name="remarks">Remarks</string>
    <string name="choose_your_plan">Choose your plan</string>
    <string name="exit_toast">Press back again to exit the app.</string>
    <string name="activate_life_saver">Activate Life Saver</string>
    <string name="successful">Successful</string>
    <string name="recharge_success">Your recharge of %1$s %2$s has been successful.</string>
    <string name="recharge_failed">Your recharge of %1$s %2$s has been failed.</string>
    <string name="activate_txt">Activate</string>
    <string name="change_password">Change Password</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="save_changes">Update</string>
    <string name="consumed_units">Consumed Units :</string>
    <string name="token_expire">Session Expired/ Invalid Access</string>
    <string name="to_re_login">to Re-login</string>
    <string name="recharge_details">Recharge Details</string>
    <string name="recharged_on">Recharged On</string>
    <string name="num">TXN Ref#</string>
    <string name="status">Status</string>
    <string name="paid_amt">Usable Amount</string>
    <string name="billed_on">Billed On</string>
    <string name="units_consumed">Units Consumed</string>
    <string name="bill_amount">Bill Amount</string>
    <string name="due_date">Due date</string>
    <string name="txn_details">Transaction Details</string>
    <string name="mode_">Mode:</string>
    <string name="consumed_unit">Unit Consumption History</string>
    <string name="units">Units</string>
    <string name="recharge_code">Recharge Code</string>
    <string name="recharge_success_card">Your connection is successfully recharged.</string>
    <string name="status_">Status</string>
    <string name="no_pending_bill">No pending bill found for your USN no.</string>
    <string name="amount_">Amount:</string>
    <string name="postpaid_bill_details">Postpaid Bill Details</string>
    <string name="billing_details">Bill Details</string>
    <string name="bill_id">Bill No.</string>
    <string name="bill_date">Billed Date</string>
    <string name="billing_from">Billing From</string>
    <string name="billing_to">Billing To</string>
    <string name="kwh">KWH</string>
    <string name="unit_rate">Rate/Unit</string>
    <string name="pay">Pay</string>
    <string name="cancel">Cancel</string>
    <string name="billing_amount">Amount</string>
    <string name="status_pp">Payment Status</string>
    <string name="due_date_">Due Date</string>
    <string name="units_consumed_">Units Consumed</string>
    <string name="payment_ref_pp">Payment Reference</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="billing_breakup">Bill Breakup</string>
    <string name="to">To</string>
    <string name="title_activity_postpaid_recharge_history">Bill History</string>
    <string name="units_heading">Itemised Statement</string>
    <string name="cost_breakup">Cost Breakup</string>
    <string name="bill_detail_heading">Last Bills and Statements</string>
    <string name="no_internet">Please check your internet connection!</string>
    <string name="enter_password">Please enter password</string>
    <string name="enter_email_password">Please enter email ID and password</string>
    <string name="your_active_onnection">Your Active Connections</string>
    <string name="your_recharge_history">Meter Recharge History</string>
    <string name="phase">Phase:</string>
    <string name="connection_type">Connection Type:</string>
    <string name="usn_">USN</string>
    <string name="tell_us_your_usn">Tell us your USN</string>
    <string name="amount_to_recharge">Amount to Recharge</string>
    <string name="units_history">Unit Consumption History</string>
    <string name="no_unit_history">Couldn\'t Get History for the Device</string>
    <string name="payment_ref_num">Payment Ref#</string>
    <string name="total_amt">Total Amount</string>
    <string name="connection_type_caps">CONNECTION TYPE:</string>
    <string name="phase_one">1</string>
    <string name="phase_three">3</string>
    <string name="rechage_code_enter">Please enter recharge code</string>
    <string name="meter_reading">Meter Reading</string>
    <string name="please_select_lifesaver_amount">Please select lifesaver amount</string>
    <string name="colon">:</string>
    <string name="state_">State:</string>
    <string name="district">District:</string>
    <string name="loan_ref_no">Loan Ref. No.</string>
    <string name="meter_model">Meter Model</string>
    <string name="loan_amount">Loan Amount</string>
    <string name="down_payment">Down Payment</string>
    <string name="bank_financier">Bank/Financier</string>
    <string name="loan_tenure">Loan Tenure</string>
    <string name="emi_for_jan_month">Emi for  %1$s Month</string>
    <string name="principal_amt">Principal Amt: %1$s</string>
    <string name="interest_amt">Interest Amt: %1$s</string>
    <string name="due_by">Due By: %1$s</string>
    <string name="install_status">Status:</string>
    <string name="pay_now">Pay Now</string>
    <string name="dated_on">Dated on</string>
</resources>