<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/margin_five"
    android:paddingBottom="@dimen/margin_five">
    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/time_txt"
        android:layout_marginLeft="@dimen/margin_two"
        android:layout_marginRight="@dimen/margin_two"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_small_16"
        android:id="@+id/tv_date"/>
    <TextView
        android:layout_width="@dimen/top_ten_rview_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/meter_reading"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_small_16"
        android:id="@+id/tv_kwh"/>
    <TextView
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/units_consumed"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_small_16"
        android:id="@+id/tv_consumed_units"
        android:layout_marginLeft="@dimen/margin_two"
        android:layout_marginRight="@dimen/margin_two"/>
    <TextView
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/unit_rate"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_small_16"
        android:id="@+id/tv_unit_rate"/>
    <TextView
        android:layout_width="@dimen/top_ten_rview_height"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_small_16"
        android:id="@+id/tv_amount"/>
</LinearLayout>
