<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:paddingTop="@dimen/margin_five"
    android:paddingBottom="@dimen/margin_five"
    android:id="@+id/ll_dynamic">

    <TextView
        android:id="@+id/tv_date"
        android:layout_weight="0.7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/date_txt"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_extra_small" />
    <TextView
        android:layout_weight="0.8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/units"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_extra_small"
        android:id="@+id/tv_consumed_units"
        android:layout_marginLeft="@dimen/margin_five"
        android:layout_marginRight="@dimen/margin_five"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/amount"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_extra_small"
        android:id="@+id/tv_amount"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/kwh"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_extra_small"
        android:id="@+id/tv_kwh"
        android:visibility="gone"/>
    <TextView
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/unit_rate"
        android:textColor="@color/text_color_light"
        android:textSize="@dimen/activity_textSize_extra_small"
        android:id="@+id/tv_unit_rate"/>
</LinearLayout>
