<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/ll_main"
    android:layout_margin="@dimen/margin_two">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_two">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/emi_for_jan_month"
            android:id="@+id/tv_bill_month"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/activity_textSize_small"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/principal_amt"
            android:id="@+id/tv_principal_amount"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/activity_textSize_small_16"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/interest_amt"
            android:id="@+id/tv_interest_amount"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/activity_textSize_small_16"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/install_status"
            android:id="@+id/tv_status"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/activity_textSize_small_16"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"/>


    </LinearLayout>
    <LinearLayout
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="end">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/due_by"
            android:id="@+id/tv_due_date"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="end"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tv_total_installment"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/text_color_light"
            android:textSize="@dimen/activity_textSize_medium"
            android:gravity="end"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_now"
            android:background="@color/blue_sky_top_view"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"
            android:visibility="invisible"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pay_now"
            android:id="@+id/tv_pay_btn"
            android:paddingLeft="@dimen/margin_five"
            android:paddingRight="@dimen/margin_five"
            android:paddingTop="@dimen/margin_two"
            android:paddingBottom="@dimen/margin_two"
            android:background="@color/blue_sky_top_view"
            android:layout_margin="@dimen/margin_two"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small"
            android:gravity="center"/>

    </LinearLayout>
</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:background="@color/text_color_light_op"
        android:layout_marginTop="@dimen/margin_two"/>
</LinearLayout>