<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".activity.ConsumedUnitsActivity"
    android:orientation="vertical">
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:orientation="horizontal"
    android:background="@color/colorPrimary"
    android:layout_gravity="center">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ll_back_btn">
        <ImageView
            android:layout_width="@dimen/activity_profile_margin"
            android:layout_height="@dimen/activity_profile_margin"
            android:src="@drawable/back"
            android:contentDescription="@string/app_name"
            android:id="@+id/iv_back_btn"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginLeft="@dimen/view_margin"/>
    </LinearLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:text="@string/consumed_unit"
        android:textColor="@color/white"
        android:layout_gravity="center"
        android:gravity="center"
        android:textAlignment="textStart"
        android:textSize="@dimen/activity_textSize_large"
        tools:ignore="RtlCompat"
        android:layout_marginLeft="@dimen/view_margin"
        android:layout_marginRight="@dimen/view_margin"
        android:padding="@dimen/margin_five"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:id="@+id/ll_download"
        android:visibility="gone">
        <ImageView
            android:layout_width="@dimen/activity_reside_menu_item_marginleft"
            android:layout_height="@dimen/activity_reside_menu_item_marginleft"
            android:src="@drawable/download"
            android:tint="@color/white"
            android:contentDescription="@string/app_name"
            android:id="@+id/iv_download"
            android:layout_gravity="center"
            android:layout_marginRight="@dimen/view_margin"
            android:layout_marginLeft="@dimen/view_margin"/>
    </LinearLayout>
</LinearLayout>
    <devs.mulham.horizontalcalendar.HorizontalCalendarView
        android:id="@+id/calendarView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:textColorSelected="#FFFF"
        app:selectorColor="@color/white"
        />
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rcv_days_data"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="@dimen/margin_five"
        android:background="@color/colorPrimary"
        android:id="@+id/ll_headers"
        android:visibility="gone">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/time_txt"
            android:padding="@dimen/margin_five"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text=""
            android:padding="@dimen/margin_five"
            android:textColor="@color/white"
            android:textSize="@dimen/activity_textSize_small_16"
            android:gravity="center"/>
    </LinearLayout>
 <HorizontalScrollView
     android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:id="@+id/hv_units">
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:orientation="vertical">
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
             android:background="@color/colorPrimary"
             android:paddingTop="@dimen/margin_five"
             android:paddingBottom="@dimen/margin_five"
             android:layout_gravity="center"
             android:gravity="center">
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/time_txt"
                 android:layout_marginLeft="@dimen/margin_two"
                 android:layout_marginRight="@dimen/margin_two"
                 android:textColor="@color/white"
                 android:textSize="@dimen/activity_textSize_small_16"
                 android:id="@+id/tv_date"/>
             <TextView
                 android:layout_width="@dimen/top_ten_rview_height"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/meter_reading"
                 android:textColor="@color/white"
                 android:textSize="@dimen/activity_textSize_small_16"
                 android:id="@+id/tv_kwh"/>
             <TextView
                 android:layout_width="120dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/units_consumed"
                 android:textColor="@color/white"
                 android:textSize="@dimen/activity_textSize_small_16"
                 android:id="@+id/tv_consumed_units"
                 android:layout_marginLeft="@dimen/margin_two"
                 android:layout_marginRight="@dimen/margin_two"/>
             <TextView
                 android:layout_width="70dp"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/unit_rate"
                 android:textColor="@color/white"
                 android:textSize="@dimen/activity_textSize_small_16"
                 android:id="@+id/tv_unit_rate"/>
             <TextView
                 android:layout_width="@dimen/top_ten_rview_height"
                 android:layout_height="match_parent"
                 android:layout_gravity="center"
                 android:gravity="center"
                 android:text="@string/amount"
                 android:textColor="@color/white"
                 android:textSize="@dimen/activity_textSize_small_16"
                 android:id="@+id/tv_amount"/>
         </LinearLayout>
         <ListView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/lv_consumed_data"
             android:visibility="gone"/>
     </LinearLayout>
 </HorizontalScrollView>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/nodata"
        android:id="@+id/tv_nodata"
        android:visibility="visible"
        android:layout_gravity="center"
        android:gravity="center"
        android:textSize="@dimen/activity_textSize_small"/>
</LinearLayout>