<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.TokenExpireActivity"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/toolbar_layout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />
        </LinearLayout>

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/token_expire"
            android:gravity="center"
            android:layout_margin="@dimen/view_margin"
            android:id="@+id/tv_session_expire"
            android:textSize="@dimen/activity_textSize_small"
            android:textColor="@color/text_color_dark"
            android:padding="@dimen/margin_five"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/click_here_forgot_password"
                android:id="@+id/tv_click_here"
                android:layout_margin="@dimen/margin_three"
                android:textColor="@color/text_color_dark"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_re_login"
                android:id="@+id/tv_relogin"
                android:textColor="@color/text_color_dark"
                android:layout_margin="@dimen/margin_three"/>
        </LinearLayout>
    </LinearLayout>


</LinearLayout>